@@ -26,9 +26,6 @@ class RuleGroup(ModelSQL, ModelView):
         help="The rule is satisfied if at least one test is True")
     groups = fields.Many2Many('ir.rule.group-res.group',
         'rule_group', 'group', 'Groups')
-    # TODO remove to only use groups
-    users = fields.Many2Many('ir.rule.group-res.user',
-        'rule_group', 'user', 'Users')
     perm_read = fields.Boolean('Read Access')
     perm_write = fields.Boolean('Write Access')
     perm_create = fields.Boolean('Create Access')
@@ -177,14 +174,12 @@ class Rule(ModelSQL, ModelView):
         pool = Pool()
         RuleGroup = pool.get('ir.rule.group')
         Model = pool.get('ir.model')
-        RuleGroup_User = pool.get('ir.rule.group-res.user')
         RuleGroup_Group = pool.get('ir.rule.group-res.group')
         User_Group = pool.get('res.user-res.group')
 
         cursor = Transaction().connection.cursor()
         rule_table = cls.__table__()
         rule_group = RuleGroup.__table__()
-        rule_group_user = RuleGroup_User.__table__()
         rule_group_group = RuleGroup_Group.__table__()
         user_group = User_Group.__table__()
         model = Model.__table__()
@@ -197,9 +192,7 @@ class Rule(ModelSQL, ModelView):
                 where=(model.model == model_name)
                 & (getattr(rule_group, 'perm_%s' % mode) == True)
                 & (rule_group.id.in_(
-                        rule_group_user.select(rule_group_user.rule_group,
-                            where=rule_group_user.user == user_id)
-                        | rule_group_group.join(
+                        rule_group_group.join(
                             user_group,
                             condition=(rule_group_group.group
                                 == user_group.group)
@@ -236,10 +229,7 @@ class Rule(ModelSQL, ModelView):
                 ).select(rule_group.id,
                 where=(model.model == model_name)
                 & ~rule_group.id.in_(rule_table.select(rule_table.rule_group))
-                & rule_group.id.in_(rule_group_user.select(
-                        rule_group_user.rule_group,
-                        where=rule_group_user.user == user_id)
-                    | rule_group_group.join(user_group,
+                & rule_group.id.in_(rule_group_group.join(user_group,
                         condition=rule_group_group.group == user_group.group
                         ).select(rule_group_group.rule_group,
                         where=user_group.user == user_id))))
