@@ -1,3 +1,4 @@
+* Remove rules on user
 * Add monetary formatting to language
 * Add exceptional parent language
 * Add get method on ir.lang
